--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body></body>
+<body>
+    <div id="container">
+
+        <nav id="navbar">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </nav>
+
+
+    </div>
+
+</body>
 
 </html>
