--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="swiper-scrollbar"></div>
         </div>
     </div>
-
+    <script src="./script.js" defer></script>
 </body>
 
 </html>
