--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                 <!-- Slides -->
                 <div class="swiper-slide"><img
                         src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL20-BLU_PD_900x600_a6c3fafb-345f-4f01-b340-02f16291f294_1080x.png?v=1580312350"
-                        alt=""></div>
+                        alt="" width="400"></div>
                 <div class="swiper-slide"><img
                         src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_29M_SalvoComp-BLK_PD_1080x.png?v=1594129616"
-                        alt=""></div>
+                        alt="" width="400"></div>
                 <div class="swiper-slide"><img
                         src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_TitleEliteProXL-BLK_PD_a6128f95-b2da-4532-bd40-99ca2645acc2_1080x.png?v=1580311209"
-                        alt=""></div>
+                        alt="" width="400"></div>
                 <div class="swiper-slide"><img
                         src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL100-GRY_PD_900x600_4110f866-de12-41f3-a005-909fed6f52ca_1080x.png?v=1580312263"
-                        alt=""></div>
+                        alt="" width="400"></div>
                 <div class="swiper-slide"><img
                         src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL10-RED_PD_900x600_08a43ea5-defb-48af-90aa-5b64b7317559_1080x.png?v=1580312197"
-                        alt=""></div>
+                        alt="" width="400"></div>
             </div>
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
