--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
             <!-- If we need scrollbar -->
             <div class="swiper-scrollbar"></div>
         </div>
+        <br><br><br><br><br><br><br><br><br><br>
+        <footer class="footer" style="background-color: gray; display:block; text-align: center;
+        padding: 30px;"><span class="footer-text" style="text-align: center;">&copy; 2020
+                WalMars inc. &trade;</span>
+        </footer>
     </div>
     <script src="./script.js" defer></script>
 </body>
