--- a/checkout.html
+++ b/checkout.html
@@ -38,6 +38,23 @@
                 <input type="text" placeholder="Address Line 2" id="add2">
             </div>
             <br>
+            <div class="form-group">
+                <label for="num">Card Number</label>
+                <input type="text" placeholder="Card Number" id="num">
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="cvv">CVV</label>
+                <input type="text" placeholder="CVV" id="cvv">
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="noc">Name On Card</label>
+                <input type="text" placeholder="Name On Card" id="noc">
+            </div>
+            <br>
+
+            <button type="submit" style="padding: 10px;">Buy Now!</button>
         </form>
     </div>
 </body>
