--- a/checkout.html
+++ b/checkout.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout | WalMars</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav id="navbar">
         <ul>
@@ -56,6 +58,12 @@
 
             <button type="submit" style="padding: 10px;">Buy Now!</button>
         </form>
+        <br><br><br><br><br><br><br><br><br><br>
+        <footer class="footer" style="background-color: gray; display:block; text-align: center;
+        padding: 30px;"><span class="footer-text" style="text-align: center;">&copy; 2020
+                WalMars inc. &trade;</span>
+        </footer>
     </div>
 </body>
+
 </html>
