--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <div id="container">
 
         <nav id="navbar">
+            <br>
+            <h3>WalMars&trade;</h3>
+            <br>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
