--- a/products.html
+++ b/products.html
@@ -10,6 +10,9 @@
 
 <body>
     <nav id="navbar">
+        <br>
+        <h3>WalMars&trade;</h3>
+        <br>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
