--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
 
 </head>
 
@@ -49,6 +51,11 @@
 
             <button type="submit" style="text-align: center; border:0px; border-radius: 4px;">Submit</button>
         </form>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <footer class="footer" style="background-color: gray; display:block; text-align: center;
+        padding: 30px;"><span class="footer-text" style="text-align: center;">&copy; 2020
+                WalMars inc. &trade;</span>
+        </footer>
     </div>
 </body>
 
