--- a/product1.html
+++ b/product1.html
@@ -31,9 +31,28 @@
     </div>
 
     <div style="text-align: center;">
-        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2019/10/hp-spectre-x360-late-2019-se-crop-01.png" alt="" width="200">
+        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2019/10/hp-spectre-x360-late-2019-se-crop-01.png" width="200">
         <p>Our Second Laptop! <br>   <span style="color: red">&dollar;1000</span></p>
     </div>
 
+    <div style="text-align: center;">
+        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2020/01/dell-xps-13-9300-se-crop-03.png" width="200">
+        <p>Our Third Laptop! <br>   <span style="color: red">&dollar;1300</span></p>
+    </div>
+
+    <div style="text-align: center;">
+        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2019/10/surface-laptop-3.png" width="200">
+        <p>Our Fourth Laptop! <br>   <span style="color: red">&dollar;2000</span></p>
+    </div>
+
+    <div style="text-align: center;">
+        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2019/10/dell-xps-13-2in1-7390-se-crop-02.png" width="200">
+        <p>Our Fifth Laptop! <br>   <span style="color: red">&dollar;900</span></p>
+    </div>
+    <br><br>
+    <footer class="footer" style="background-color: gray; display:block; text-align: center;
+        padding: 30px;"><span class="footer-text" style="text-align: center;">&copy; 2020
+                WalMars inc. &trade;</span>
+    </footer>
 </body>
 </html>
