--- a/product2.html
+++ b/product2.html
@@ -27,35 +27,35 @@
     <br>
     <div style="text-align: center;">
         <img src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/R1775_20U_AxiosPro-YLW_PD1_900x600_34af4dce-1db4-450c-9309-30d8875e1a51_1080x.png?v=1593547472" width="200">
-        <p>Our First Bike! <br>   <span style="color: red;">&dollar;1299</span></p>
+        <p>Our First Bike! <br>   <span style="color: red;">&dollar;1299</span></p><br><br><br>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
 
     <div style="text-align: center;">
         <img src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/R1976AZ_20B_ArgusMX-TAN_PD1_900x600_ac59522d-b263-4ccb-9f8f-7ab01265c84f_1080x.png?v=1593621764" width="200">
-        <p>Our Second Bike! <br>   <span style="color: red">&dollar;1000</span></p>
+        <p>Our Second Bike! <br>   <span style="color: red">&dollar;1000</span></p><br><br><br>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
 
     <div style="text-align: center;">
         <img src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL10-RED_PD_900x600_08a43ea5-defb-48af-90aa-5b64b7317559_1080x.png?v=1580312197" width="200">
-        <p>Our Third Bike! <br>   <span style="color: red">&dollar;1300</span></p>
+        <p>Our Third Bike! <br>   <span style="color: red">&dollar;1300</span></p><br><br><br>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
 
     <div style="text-align: center;">
         <img src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL20-BLU_PD_900x600_a6c3fafb-345f-4f01-b340-02f16291f294_1080x.png?v=1580312350" width="200">
-        <p>Our Fourth Bike! <br>   <span style="color: red">&dollar;2000</span></p>
+        <p>Our Fourth Bike! <br>   <span style="color: red">&dollar;2000</span></p><br><br><br>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
 
     <div style="text-align: center;">
         <img src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL60-GRN_PD_900x600_add1b79c-44e2-4864-bc34-f2bb3a7d7f0e_1080x.png?v=1580312557" width="200">
-        <p>Our Fifth Bike! <br>   <span style="color: red">&dollar;900</span></p>
+        <p>Our Fifth Bike! <br>   <span style="color: red">&dollar;900</span></p><br><br><br>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
