--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
                         
                         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
                             href="product2.html">See More!</a> </button></div>
-                <div class="swiper-slide"><img
-                        src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_29M_SalvoComp-BLK_PD_1080x.png?v=1594129616"
-                        alt="" width="400"></div>
-                <div class="swiper-slide"><img
-                        src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_TitleEliteProXL-BLK_PD_a6128f95-b2da-4532-bd40-99ca2645acc2_1080x.png?v=1580311209"
-                        alt="" width="400"></div>
-                <div class="swiper-slide"><img
-                        src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL100-GRY_PD_900x600_4110f866-de12-41f3-a005-909fed6f52ca_1080x.png?v=1580312263"
-                        alt="" width="400">
-           
+                <div class="swiper-slide">
+                    <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/w1200h675crop_wm_brb/public/field/image/2020/03/hp-spectre-x360-13-late-2019-1.jpg" alt="">
+                    <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
+                        href="product2.html">See More!</a> </button></div>
                 </div>
-                <div class="swiper-slide"><img
-                        src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL10-RED_PD_900x600_08a43ea5-defb-48af-90aa-5b64b7317559_1080x.png?v=1580312197"
-                        alt="" width="400"></div>
-            </div>
+                <div class="swiper-slide">
+                    <img src="" alt="">
+                    <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
+                        href="product2.html">See More!</a> </button></div>
+                </div>
+                <div class="swiper-slide">
+                    <img src="" alt="">
+                    <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
+                        href="product2.html">See More!</a> </button></div>
+                </div>
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
 
