--- a/product4.html
+++ b/product4.html
@@ -26,7 +26,7 @@
     </div>
     <br>
     <div style="text-align: center;">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pcmag.com%2Fpicks%2Fthe-best-tablets&psig=AOvVaw1nRu7-vJmeazMrX52oWgW1&ust=1598389191714000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCMjF6fPdtOsCFQAAAAAdAAAAABAG" width="200">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/61TnJmEb%2B3L._AC_SX679_.jpg" width="200">
         <p>Our First Tablet! <br>   <span style="color: red;">&dollar;1299</span></p>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
