--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                         href="product2.html">See More!</a> </button></div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="" alt="">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/61TnJmEb%2B3L._AC_SX679_.jpg" alt="">
                     <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
                         href="product2.html">See More!</a> </button></div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="" alt="">
+                    <img src="https://cdn.vox-cdn.com/thumbor/tGIdhxDlsrpQSgfnrbYMpPtnL6o=/0x0:2040x1360/1820x1213/filters:focal(877x866:1203x1192):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/66397697/akrales_181019_3014_0770.0.jpg" alt="">
                     <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
                         href="product2.html">See More!</a> </button></div>
                 </div>
