--- a/index.html
+++ b/index.html
@@ -1,76 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | WalMars</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-</head>
-
-<body>
-    <div id="container">
-
-        <nav id="navbar">
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Home | WalMars</title>
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+      <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+      <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+      <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+   </head>
+   <body>
+      <div id="container">
+         <nav id="navbar">
             <br>
             <h3>WalMars&trade;</h3>
             <br>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="products.html">Products</a></li>
+               <li><a href="aboutus.html">About Us</a></li>
+               <li><a href="contact.html">Contact Us</a></li>
             </ul>
-        </nav>
-        <br><br><br>
-        <!-- Slider main container -->
-        <div class="swiper-container">
+         </nav>
+         <br><br><br>
+         <!-- Slider main container -->
+         <div class="swiper-container">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img
-                        src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL20-BLU_PD_900x600_a6c3fafb-345f-4f01-b340-02f16291f294_1080x.png?v=1580312350"
-                        alt="" width="400">
-                        
-                        <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
-                            href="product2.html">See More!</a> </button></div>
-                <div class="swiper-slide">
-                    <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/w1200h675crop_wm_brb/public/field/image/2020/03/hp-spectre-x360-13-late-2019-1.jpg" alt="">
-                    <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
-                        href="product2.html">See More!</a> </button></div>
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://images-na.ssl-images-amazon.com/images/I/61TnJmEb%2B3L._AC_SX679_.jpg" alt="">
-                    <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
-                        href="product2.html">See More!</a> </button></div>
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://cdn.vox-cdn.com/thumbor/tGIdhxDlsrpQSgfnrbYMpPtnL6o=/0x0:2040x1360/1820x1213/filters:focal(877x866:1203x1192):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/66397697/akrales_181019_3014_0770.0.jpg" alt="">
-                    <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
-                        href="product2.html">See More!</a> </button></div>
-                </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
-        </div>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <footer class="footer" style="background-color: gray; display:block; text-align: center;
-        padding: 30px;"><span class="footer-text" style="text-align: center;">&copy; 2020
-                WalMars inc. &trade;</span>
-        </footer>
-    </div>
-    <script src="./script.js" defer></script>
-</body>
-
+               <!-- Slides -->
+               <div class="swiper-slide"><img
+                  src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL20-BLU_PD_900x600_a6c3fafb-345f-4f01-b340-02f16291f294_1080x.png?v=1580312350"
+                  alt="" width="400">
+                  <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
+                     href="product2.html">See More!</a> </button>
+               </div>
+               <div class="swiper-slide">
+                  <img  width="400" src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/w1200h675crop_wm_brb/public/field/image/2020/03/hp-spectre-x360-13-late-2019-1.jpg" alt="">
+                  <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
+                     href="product2.html">See More!</a> </button>
+               </div>
+            </div>
+            <div class="swiper-slide">
+               <img  width="400" src="https://images-na.ssl-images-amazon.com/images/I/61TnJmEb%2B3L._AC_SX679_.jpg" alt="">
+               <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
+                  href="product2.html">See More!</a> </button>
+            </div>
+         </div>
+         <div class="swiper-slide">
+            <img  width="400" src="https://cdn.vox-cdn.com/thumbor/tGIdhxDlsrpQSgfnrbYMpPtnL6o=/0x0:2040x1360/1820x1213/filters:focal(877x866:1203x1192):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/66397697/akrales_181019_3014_0770.0.jpg" alt="">
+            <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
+               href="product2.html">See More!</a> </button>
+         </div>
+      </div>
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+      <!-- If we need scrollbar -->
+      <div class="swiper-scrollbar"></div>
+      </div>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <footer class="footer" style="background-color: gray; display:block; text-align: center;
+         padding: 30px;"><span class="footer-text" style="text-align: center;">&copy; 2020
+         WalMars inc. &trade;</span>
+      </footer>
+      </div>
+      <script src="./script.js" defer></script>
+   </body>
 </html>
