--- a/product4.html
+++ b/product4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laptops | WalMars</title>
+    <title>Tablets | WalMars</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -33,30 +33,30 @@
     </div>
 
     <div style="text-align: center;">
-        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2019/10/hp-spectre-x360-late-2019-se-crop-01.png" width="200">
-        <p>Our Second Laptop! <br>   <span style="color: red">&dollar;1000</span></p>
+        <img src="https://images-na.ssl-images-amazon.com/images/I/61KujhorFTL._AC_SX679_.jpg" width="200">
+        <p>Our Second Tablet! <br>   <span style="color: red">&dollar;1000</span></p>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
 
     <div style="text-align: center;">
-        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2020/01/dell-xps-13-9300-se-crop-03.png" width="200">
-        <p>Our Third Laptop! <br>   <span style="color: red">&dollar;1300</span></p>
+        <img src="https://images-na.ssl-images-amazon.com/images/I/61jIs7q6SML._AC_SX679_.jpg" width="200">
+        <p>Our Third Tablet! <br>   <span style="color: red">&dollar;1300</span></p>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
     
 
     <div style="text-align: center;">
-        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2019/10/surface-laptop-3.png" width="200">
-        <p>Our Fourth Laptop! <br>   <span style="color: red">&dollar;2000</span></p>
+        <img src="https://m.media-amazon.com/images/I/61kdmmu2g-L._AC_UL640_FMwebp_QL65_.jpg" width="200">
+        <p>Our Fourth Tablet! <br>   <span style="color: red">&dollar;2000</span></p>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
 
     <div style="text-align: center;">
-        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2019/10/dell-xps-13-2in1-7390-se-crop-02.png" width="200">
-        <p>Our Fifth Laptop! <br>   <span style="color: red">&dollar;900</span></p>
+        <img src="https://m.media-amazon.com/images/I/61lgxCi9b7L._AC_UY436_FMwebp_QL65_.jpg" width="200">
+        <p>Our Fifth Tablet! <br>   <span style="color: red">&dollar;900</span></p>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
