--- a/product3.html
+++ b/product3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laptops | WalMars</title>
+    <title>Iphones | WalMars</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -22,41 +22,41 @@
     </nav>
     <br><br><br>
     <div style="text-align: center;">
-        <h2>OUR LAPTOPS</h2>
+        <h2>OUR PHONES</h2>
     </div>
     <br>
     <div style="text-align: center;">
-        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/w1200h675crop_wm_brb/public/field/image/2020/03/hp-spectre-x360-13-late-2019-1.jpg" width="200">
-        <p>Our First Laptop! <br>   <span style="color: red;">&dollar;1299</span></p>
+        <img src="https://m.media-amazon.com/images/I/41ZtfBP1C6L._AC_UY436_FMwebp_QL65_.jpg" width="200">
+        <p>Our First Phone! <br>   <span style="color: red;">&dollar;1299</span></p>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
 
     <div style="text-align: center;">
-        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2019/10/hp-spectre-x360-late-2019-se-crop-01.png" width="200">
-        <p>Our Second Laptop! <br>   <span style="color: red">&dollar;1000</span></p>
+        <img src="https://m.media-amazon.com/images/I/81F-QC1N5WL._AC_UY436_FMwebp_QL65_.jpg" width="200">
+        <p>Our Second Phone! <br>   <span style="color: red">&dollar;1000</span></p>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
 
     <div style="text-align: center;">
-        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2020/01/dell-xps-13-9300-se-crop-03.png" width="200">
-        <p>Our Third Laptop! <br>   <span style="color: red">&dollar;1300</span></p>
+        <img src="https://m.media-amazon.com/images/I/51GUjMAFDbL._AC_UY436_FMwebp_QL65_.jpg" width="200">
+        <p>Our Third Phone! <br>   <span style="color: red">&dollar;1300</span></p>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
     
 
     <div style="text-align: center;">
-        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2019/10/surface-laptop-3.png" width="200">
-        <p>Our Fourth Laptop! <br>   <span style="color: red">&dollar;2000</span></p>
+        <img src="https://m.media-amazon.com/images/I/71XeQzRDyML._AC_UY436_FMwebp_QL65_.jpg" width="200">
+        <p>Our Fourth Phone! <br>   <span style="color: red">&dollar;2000</span></p>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
 
     <div style="text-align: center;">
-        <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/mediumplus/public/field/image/2019/10/dell-xps-13-2in1-7390-se-crop-02.png" width="200">
-        <p>Our Fifth Laptop! <br>   <span style="color: red">&dollar;900</span></p>
+        <img src="https://m.media-amazon.com/images/I/81BwcI+j7yL._AC_UY436_FMwebp_QL65_.jpg" width="200">
+        <p>Our Fifth Phone! <br>   <span style="color: red">&dollar;900</span></p>
         <button type="submit" style="text-align: center; z-index: 10; padding:10px;"><a
             href="checkout.html">Buy!</a> </button>
     </div>
