--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <img src="https://images-na.ssl-images-amazon.com/images/I/61TnJmEb%2B3L._AC_SX679_.jpg" width="300">
             <button style="width: 50px; height: 50px;"><a href="./product4.html">Buy!</a></button>
         </div>
+        <div class="swiper-slide">
+            <img src="https://m.media-amazon.com/images/I/41ZtfBP1C6L._AC_UY436_FMwebp_QL65_.jpg" width="300" height="300">
+            <button style="width: 50px; height: 50px; position: relative; top: -50px;"><a href="./product3.html">Buy!</a></button>
+        </div>
     </div>
     <!-- If we need pagination -->
     <div class="swiper-pagination"></div>
