--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
     <div class="swiper-scrollbar"></div>
 </div>
       </div>
+      <br><br><br><br><br><br><br><br>
+      <img src="https://cdn.shopify.com/s/files/1/0074/5432/6862/products/M20_20U_LegionL20-BLU_PD_900x600_a6c3fafb-345f-4f01-b340-02f16291f294_1080x.png?v=1580312350" width="400">
+      <button style="width: 50px; height: 50px;"><a href="product2.html">Buy!</a></button>
+
+      <img src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/w1200h675crop_wm_brb/public/field/image/2020/03/hp-spectre-x360-13-late-2019-1.jpg" width="400">
+            <button style="width: 50px; height: 50px;"><a href="./product1.html">Buy!</a></button>
+            <img src="https://images-na.ssl-images-amazon.com/images/I/61TnJmEb%2B3L._AC_SX679_.jpg" width="300">
+            <button style="width: 50px; height: 50px;"><a href="./product4.html">Buy!</a></button>
+            <img src="https://images-na.ssl-images-amazon.com/images/I/61TnJmEb%2B3L._AC_SX679_.jpg" width="300">
+            <button style="width: 50px; height: 50px;"><a href="./product4.html">Buy!</a></button>
+            <img src="https://m.media-amazon.com/images/I/41ZtfBP1C6L._AC_UY436_FMwebp_QL65_.jpg" width="300" height="300">
+            <button style="width: 50px; height: 50px; position: relative; top: -50px;"><a href="./product3.html">Buy!</a></button>
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       <footer class="footer" style="background-color: gray; display:block; text-align: center;
          padding: 30px;"><span class="footer-text" style="text-align: center;">&copy; 2020
